--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-example-flex",
   "description": "Demo for gatsby-theme-flex.",
   "private": true,
-  "version": "1.1.9",
+  "version": "1.1.10",
   "author": "arshad <arshad@chummun.com>",
   "license": "MIT",
   "scripts": {
@@ -14,14 +14,14 @@
     "preview": "gatsby build && gatsby serve"
   },
   "devDependencies": {
-    "gatsby": "2.19.7",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "gatsby": "^2.21.11",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
-    "gatsby": "2.19.7",
-    "gatsby-theme-flex": "^0.2.4",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "gatsby": "^2.21.11",
+    "gatsby-theme-flex": "^0.2.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
